[package]
name = "hello-rust"
version = "0.1.0"
authors = ["taastbeb <benjamin.stalder@swisscom.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ferris-says = "0.2.0"
rand = "0.7.3"
env_logger = "0.8.2"
log = "0.4.11"
pixels = "0.2.0"
winit = "0.23.0"
winit_input_helper = "0.8.0"
image = "0.23.12"
num-complex = "0.3.1"
bracket-noise = "0.8.1"
